@@ -430,6 +430,9 @@
 					RelativePath="..\SVN\SVN.cpp">
 				</File>
 				<File
+					RelativePath="..\Svn\SVNConfig.cpp">
+				</File>
+				<File
 					RelativePath="..\Svn\SVNPrompt.cpp">
 				</File>
 				<File
@@ -480,6 +483,9 @@
 				Filter="h;hpp;hxx;hm;inl;inc">
 				<File
 					RelativePath="..\SVN\SVN.h">
+				</File>
+				<File
+					RelativePath="..\Svn\SVNConfig.h">
 				</File>
 				<File
 					RelativePath="..\Svn\SVNPrompt.h">
@@ -789,10 +795,10 @@
 					RelativePath="..\Languages\res\ssh.ico">
 				</File>
 				<File
-					RelativePath="..\Languages\res\Tortoise.ico">
+					RelativePath="..\Icons\Tortoise.ico">
 				</File>
 				<File
-					RelativePath="..\Icons\Tortoise.ico">
+					RelativePath="..\Languages\res\Tortoise.ico">
 				</File>
 				<File
 					RelativePath="..\Icons\Tortoise13by13.ico">
