@@ -16,6 +16,7 @@
        applications much easier. No temp files are required
        anymore if the param /notempfile is given on the
        command line. (Stefan)
+- ADD: The ignore patterns work on unversioned folders. (Stefan)
 - BUG: TortoiseMerge skipped diffs of one line with the
        "Next Diff" or "Previous Diff" commands. (Stefan)
 
